k8s/essentia/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: essentia-web
  namespace: essentia
spec:
  selector:
    app: essentia-web
  ports:
    - port: 3000
      targetPort: 3000
